overflow fix

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,5 +1,5 @@
-html {overflow-x:hidden;}
-body {background-color:black;margin:0;padding:0;font-family: "Roobert";}
+html {overflow-x:hidden;margin:0;padding:0;}
+body {background-color:black;margin:0;padding:0;font-family: "Roobert"; overflow-x:hidden}
 
 #c {
   position: absolute;
